# vm-performance-UMA

./: .gitignore  README.md  pyproject.toml  vm_performance.ipynb
bench/: ddcopy  forkwait.c  pi.bc
data/: README.md  guest_info.txt  guest_mem.txt  guest_uname.txt  host_bench.json  host_info.txt  host_mem.txt  host_release.txt  host_uname.txt  with_vm_bench.json  without_vm_bench.json
src/: performance_host.py  performance_virtualbox.py  util.py
