[tool.poetry]
name = "vm-performance-UMA"
version = "0.1.0"
description = ""
authors = ["Altair-Bueno <67512202+Altair-Bueno@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.14.5"
matplotlib = "^3.5.3"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
